Slice refactoring and start of theming

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,290 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'MADE Evolve Sans EVO';
+  src: local('MADE Evolve Sans EVO Medium'), local('MADEEvolveSansEVO-Medium'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevomedium.woff2')
+      format('woff2'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevomedium.woff') format('woff'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevomedium.ttf')
+      format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'MADE Evolve Sans EVO';
+  src: local('MADE Evolve Sans EVO Thin'), local('MADEEvolveSansEVO-Thin'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevothin.woff2') format('woff2'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevothin.woff') format('woff'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevothin.ttf')
+      format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'MADE Evolve Sans EVO';
+  src: local('MADE Evolve Sans EVO Light'), local('MADEEvolveSansEVO-Light'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevolight.woff2')
+      format('woff2'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevolight.woff') format('woff'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevolight.ttf')
+      format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'MADE Evolve Sans EVO';
+  src: local('MADE Evolve Sans EVO'), local('MADEEvolveSansEVO'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevo.woff2') format('woff2'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevo.woff') format('woff'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevo.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'MADE Evolve Sans EVO';
+  src: local('MADE Evolve Sans EVO Bold'), local('MADEEvolveSansEVO-Bold'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevobold.woff2') format('woff2'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevobold.woff') format('woff'),
+    url('./fonts/madeevolvesansevo/Madeevolvesansevobold.ttf')
+      format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro Ultra';
+  src: url('./fonts/univiapro/UniviaPro-UltraItalic.eot');
+  src: local('Univia Pro Ultra Italic'), local('UniviaPro-UltraItalic'),
+    url('./fonts/univiapro/UniviaPro-UltraItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-UltraItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-UltraItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-UltraItalic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro Book';
+  src: url('./fonts/univiapro/UniviaPro-Book.eot');
+  src: local('Univia Pro Book'), local('UniviaPro-Book'),
+    url('./fonts/univiapro/UniviaPro-Book.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Book.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Book.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Book.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro Book';
+  src: url('./fonts/univiapro/UniviaPro-BookItalic.eot');
+  src: local('Univia Pro Book Italic'), local('UniviaPro-BookItalic'),
+    url('./fonts/univiapro/UniviaPro-BookItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-BookItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-BookItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-BookItalic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-MediumItalic.eot');
+  src: local('Univia Pro Medium Italic'), local('UniviaPro-MediumItalic'),
+    url('./fonts/univiapro/UniviaPro-MediumItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-MediumItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-MediumItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro Ultra';
+  src: url('./fonts/univiapro/UniviaPro-UltraLight.eot');
+  src: local('Univia Pro Ultra Light'), local('UniviaPro-UltraLight'),
+    url('./fonts/univiapro/UniviaPro-UltraLight.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-UltraLight.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-UltraLight.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-UltraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-LightItalic.eot');
+  src: local('Univia Pro Light Italic'), local('UniviaPro-LightItalic'),
+    url('./fonts/univiapro/UniviaPro-LightItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-LightItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-LightItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Medium.eot');
+  src: local('Univia Pro Medium'), local('UniviaPro-Medium'),
+    url('./fonts/univiapro/UniviaPro-Medium.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Medium.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Medium.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Light.eot');
+  src: local('Univia Pro Light'), local('UniviaPro-Light'),
+    url('./fonts/univiapro/UniviaPro-Light.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Light.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Light.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Thin.eot');
+  src: local('Univia Pro Thin'), local('UniviaPro-Thin'),
+    url('./fonts/univiapro/UniviaPro-Thin.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Thin.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Thin.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-ThinItalic.eot');
+  src: local('Univia Pro Thin Italic'), local('UniviaPro-ThinItalic'),
+    url('./fonts/univiapro/UniviaPro-ThinItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-ThinItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-ThinItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-ThinItalic.ttf') format('truetype');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-BoldItalic.eot');
+  src: local('Univia Pro Bold Italic'), local('UniviaPro-BoldItalic'),
+    url('./fonts/univiapro/UniviaPro-BoldItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-BoldItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-BoldItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro Ultra';
+  src: url('./fonts/univiapro/UniviaPro-UltraLightItalic.eot');
+  src: local('Univia Pro Ultra Light Italic'),
+    local('UniviaPro-UltraLightItalic'),
+    url('./fonts/univiapro/UniviaPro-UltraLightItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-UltraLightItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-UltraLightItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-UltraLightItalic.ttf') format('truetype');
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Italic.eot');
+  src: local('Univia Pro Italic'), local('UniviaPro-Italic'),
+    url('./fonts/univiapro/UniviaPro-Italic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Italic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Italic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro Ultra';
+  src: url('./fonts/univiapro/UniviaPro-Ultra.eot');
+  src: local('Univia Pro Ultra'), local('UniviaPro-Ultra'),
+    url('./fonts/univiapro/UniviaPro-Ultra.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Ultra.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Ultra.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Ultra.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Black.eot');
+  src: local('Univia Pro Black'), local('UniviaPro-Black'),
+    url('./fonts/univiapro/UniviaPro-Black.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Black.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Black.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Regular.eot');
+  src: local('Univia Pro Regular'), local('UniviaPro-Regular'),
+    url('./fonts/univiapro/UniviaPro-Regular.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Regular.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Regular.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-BlackItalic.eot');
+  src: local('Univia Pro Black Italic'), local('UniviaPro-BlackItalic'),
+    url('./fonts/univiapro/UniviaPro-BlackItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-BlackItalic.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-BlackItalic.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-BlackItalic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Univia Pro';
+  src: url('./fonts/univiapro/UniviaPro-Bold.eot');
+  src: local('Univia Pro Bold'), local('UniviaPro-Bold'),
+    url('./fonts/univiapro/UniviaPro-Bold.eot?#iefix')
+      format('embedded-opentype'),
+    url('./fonts/univiapro/UniviaPro-Bold.woff2') format('woff2'),
+    url('./fonts/univiapro/UniviaPro-Bold.woff') format('woff'),
+    url('./fonts/univiapro/UniviaPro-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
